Enhance freelancer dashboard and profile management; implement toggle buttons for visibility and order acceptance in the freelancer dashboard, update API integration for freelancer profile fetching, and refactor schedule management components for improved functionality and user experience.

--- a/todo.txt
+++ b/todo.txt
@@ -1,36 +1,139 @@
-modify the PublicFreelancers.jsx component so that whent the users click on one of the freelancers, they can view the freelancers view. in the freelancers view, you will be able to see the description of the freelancer himself. make sure
-to include the freelancer id in the route e.g. /freelancer/{id}.
+The api below let's you update any field from the freelancer table, I want you to add 2 toggle buttons in the freelancer dashboard
+
+one button for toggling is_public and the other is accepting_orders, of course they will be initialized according to the 
+
+response from first loading the page which coms from "/users/me/freelancer/" GET, there you will get the info in the freelancer object
+and set the toggle button according to the response values.
+
+implement it accordingly
 
 
 
-route: "/freelancers/:id"
-request type: GET
+
+
+
+route: "/users/me/freelancer/"
+request type: PATCH
 method:
-type getPublicFreelancerByIDRequest struct {
-	ID int64 `uri:"id" binding:"required,min=1"`
+type updateFreelancerRequest struct {
+	IsAcceptingOrders *bool     `json:"is_accepting_orders" binding:"omitempty"`
+	IsPublic          *bool     `json:"is_public" binding:"omitempty"`
+	Bio               *string   `json:"bio" binding:"omitempty,min=10"`
+	YearsOfExperience *int32      `json:"years_of_experience" binding:"omitempty,min=0"`
+	Certifications    *[]string `json:"certifications" binding:"omitempty"`
+	CprFrontUrl       *string   `json:"cpr_front_url" binding:"omitempty,url"`
+	CprBackUrl        *string   `json:"cpr_back_url" binding:"omitempty,url"`
+	PassportUrl       *string   `json:"passport_url" binding:"omitempty,url"`
+	SelfiePhotoUrl    *string   `json:"selfie_photo_url" binding:"omitempty,url"`
 }
 
-func (s *Server) getPublicFreelancerByIDHandler(c *gin.Context) {
-	var req getPublicFreelancerByIDRequest
-	if err := c.ShouldBindUri(&req); err != nil {
+func (s *Server) updateFreelancerHandler(c *gin.Context) {
+	payloadVal, ok := c.Get(authenticatedPayload)
+	if !ok {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "unauthorized"})
+		return
+	}
+	payload := payloadVal.(token.Payload)
+	userID := payload.UserID
+
+	if payload.Role != "freelancer" {
+		c.JSON(http.StatusForbidden, gin.H{"error": "unauthorized"})
+		return
+	}
+
+	var req updateFreelancerRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
-	freelancer, err := s.Store.GetPublicFreelancerByID(c, req.ID)
-	if err != nil {
-		if errors.Is(err, pgx.ErrNoRows) {
-			c.JSON(http.StatusNotFound, gin.H{"error": "freelancer not found"})
-			return
+	// Build nullable pgtype values; if a field is omitted, Valid=false to leave unchanged
+	var updIsAccepting pgtype.Bool
+	if req.IsAcceptingOrders != nil {
+		updIsAccepting = pgtype.Bool{Bool: *req.IsAcceptingOrders, Valid: true}
+	} else {
+		updIsAccepting = pgtype.Bool{Bool: false, Valid: false}
+	}
+
+	var updIsPublic pgtype.Bool
+	if req.IsPublic != nil {
+		updIsPublic = pgtype.Bool{Bool: *req.IsPublic, Valid: true}
+	} else {
+		updIsPublic = pgtype.Bool{Bool: false, Valid: false}
+	}
+
+	var updBio pgtype.Text
+	if req.Bio != nil && strings.TrimSpace(*req.Bio) != "" {
+		updBio = pgtype.Text{String: *req.Bio, Valid: true}
+	} else {
+		updBio = pgtype.Text{String: "", Valid: false}
+	}
+
+	var updYoe pgtype.Int4
+	if req.YearsOfExperience != nil {
+		updYoe = pgtype.Int4{Int32: int32(*req.YearsOfExperience), Valid: true}
+	} else {
+		updYoe = pgtype.Int4{Int32: 0, Valid: false}
+	}
+
+	var updCerts []string
+	if req.Certifications != nil {
+		if len(*req.Certifications) > 0 {
+			updCerts = *req.Certifications
+		} else {
+			updCerts = nil
 		}
+	} else {
+		updCerts = nil
+	}
+
+	var updCprFront pgtype.Text
+	if req.CprFrontUrl != nil && strings.TrimSpace(*req.CprFrontUrl) != "" {
+		updCprFront = pgtype.Text{String: *req.CprFrontUrl, Valid: true}
+	} else {
+		updCprFront = pgtype.Text{String: "", Valid: false}
+	}
+
+	var updCprBack pgtype.Text
+	if req.CprBackUrl != nil && strings.TrimSpace(*req.CprBackUrl) != "" {
+		updCprBack = pgtype.Text{String: *req.CprBackUrl, Valid: true}
+	} else {
+		updCprBack = pgtype.Text{String: "", Valid: false}
+	}
+
+	var updPassport pgtype.Text
+	if req.PassportUrl != nil && strings.TrimSpace(*req.PassportUrl) != "" {
+		updPassport = pgtype.Text{String: *req.PassportUrl, Valid: true}
+	} else {
+		updPassport = pgtype.Text{String: "", Valid: false}
+	}
+
+	var updSelfie pgtype.Text
+	if req.SelfiePhotoUrl != nil && strings.TrimSpace(*req.SelfiePhotoUrl) != "" {
+		updSelfie = pgtype.Text{String: *req.SelfiePhotoUrl, Valid: true}
+	} else {
+		updSelfie = pgtype.Text{String: "", Valid: false}
+	}
+
+	freelancer, err := s.Store.UpdatePartialFreelancer(c, db.UpdatePartialFreelancerParams{
+		UserID:            userID,
+		IsAcceptingOrders: updIsAccepting,
+		IsPublic:          updIsPublic,
+		Bio:               updBio,
+		YearsOfExperience: updYoe,
+		Certifications:    updCerts,
+		CprFrontUrl:       updCprFront,
+		CprBackUrl:        updCprBack,
+		PassportUrl:       updPassport,
+		SelfiePhotoUrl:    updSelfie,
+	})
+	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
 	c.JSON(http.StatusOK, gin.H{"freelancer": freelancer})
 }
-response:
-adnan@adnan-iMac14-2:~$ curl http://localhost:5000/api/v1/freelancers/2
-{"freelancer":{"full_name":"Adnan Sarhan","gender":"female","avatar_url":"https://lh3.googleusercontent.com/a/ACg8ocJEj6-O9gsjggGHdYK-N616FplrUu1QdgSr5eXspmvP9zd9tw=s96-c","date_of_birth":"2001-11-11","nationality":"Bahrain","is_accepting_orders":true,"bio":"fewfewfewfwefewfewfewfwe","years_of_experience":12,"certifications":["First Aid"],"services":[{"description":"dedededede","fixed_price":12,"id":1,"location":"on_premise","max_price":null,"min_price":null,"pricing":"fixed","products_used":["ass"],"service_category_id":1,"service_category_name":"Hair","service_duration_seconds":10620,"title":"deedede"},{"description":"freferfrefrefreferferfrfrefre","fixed_price":null,"id":2,"location":"on_premise","max_price":123.22,"min_price":11,"pricing":"range","products_used":["Ass Cream"],"service_category_id":3,"service_category_name":"Makeup","service_duration_seconds":3600,"title":"why you putting on makeup"},{"description":"Long-lasting gel polish.","fixed_price":12,"id":6,"location":"on_premise","max_price":null,"min_price":null,"pricing":"fixed","products_used":["Gel Polish"],"service_category_id":2,"service_category_name":"Nails","service_duration_seconds":2400,"title":"Gel Manicure"},{"description":"Blowout and hair shaping.","fixed_price":null,"id":7,"location":"door_step","max_price":18,"min_price":10,"pricing":"range","products_used":["Hair Dryer","Spray"],"service_category_id":1,"service_category_name":"Hair","service_duration_seconds":3600,"title":"Hair Styling"},{"description":"One-on-one workout session.","fixed_price":20,"id":8,"location":"door_step","max_price":null,"min_price":null,"pricing":"fixed","products_used":["Resistance Bands"],"service_category_id":7,"service_category_name":"Health \u0026 Fitness","service_duration_seconds":3600,"title":"Personal Fitness Session"}]}}
-adnan@adnan-iMac14-2:~$ curl http://localhost:5000/api/v1/freelancers/3
-{"error":"freelancer not found"}
+
+
+here the response does not include address or services so keep that in mind
